<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".view.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:inputType="text"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints="@string/email"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/faded_light_blue"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        tools:ignore="RtlSymmetry"
        android:text="Taher@gmail.com"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:textColorHint="@color/colorPrimary"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/faded_light_blue"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"
        tools:ignore="RtlSymmetry"
        android:text="123789"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/grey"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15ssp"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:background="@drawable/edit_text_background"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="@id/et_username"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_semi_bold"/>

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginStart="@dimen/_5sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>