<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.changepassword.ChangePasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tv_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/et_old_password" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/old_password"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints="@string/new_password"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/faded_light_blue"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/new_password"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints="@string/new_password"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/faded_light_blue"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/et_old_password"
        app:layout_constraintStart_toStartOf="@id/et_old_password"
        app:layout_constraintEnd_toEndOf="@id/et_old_password"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textSize="@dimen/_14ssp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorPrimary"
        android:autofillHints="@string/confirm_password"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/faded_light_blue"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/et_new_password"
        app:layout_constraintStart_toStartOf="@id/et_old_password"
        app:layout_constraintEnd_toEndOf="@id/et_old_password"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_changes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_17ssp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/montserrat_semi_bold"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/et_old_password"
        app:layout_constraintEnd_toEndOf="@id/et_old_password"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>