<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/hi"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_text"
            app:layout_constraintStart_toStartOf="@id/tv_profile_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:paddingEnd="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="@id/tv_profile_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/tv_add_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:text="@string/add_profile"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"/>

        <ImageView
            android:id="@+id/iv_add_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus_grey"
            android:paddingEnd="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="@id/tv_add_profile"
            app:layout_constraintBottom_toBottomOf="@id/tv_add_profile"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/grey"
            android:textSize="@dimen/_17ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_add_profile"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name" />

        <TextView
            android:id="@+id/tv_language_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/language"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_setting"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/grey"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintTop_toTopOf="@id/tv_language_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_language_text"
            app:layout_constraintEnd_toStartOf="@id/iv_change_language"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:paddingEnd="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="@id/tv_language_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_language_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_change_password_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_language"
            app:layout_constraintStart_toStartOf="@id/tv_profile_text"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            android:padding="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="@id/tv_change_password_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_change_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_medlarm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/grey"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_change_password_text"
            app:layout_constraintStart_toStartOf="@id/tv_setting" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/about"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_medlarm_text"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_contact_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/contact_us"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/unselected_medication"
            android:backgroundTint="@color/light_grey"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semi_bold"
            app:layout_constraintTop_toBottomOf="@id/tv_about"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17ssp"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/montserrat_semi_bold"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/tv_profile_name"
            app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
            app:layout_constraintTop_toBottomOf="@id/tv_contact_us"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>